<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="false"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/goal_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/title"
        android:layout_width="156dp"
        android:layout_height="82dp"
        android:layout_marginVertical="100dp"
        android:backgroundTint="#87CEFA"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/replay"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/replay"
        android:layout_width="156dp"
        android:layout_height="82dp"
        android:layout_marginVertical="100dp"
        android:backgroundTint="#87CEFA"
        android:text="@string/replay"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/time"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginVertical="100dp"
        android:text="00:00"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="@+id/goal"
        app:layout_constraintStart_toStartOf="@+id/goal"
        app:layout_constraintTop_toBottomOf="@+id/goal" />
</androidx.constraintlayout.widget.ConstraintLayout>